[tool.poetry]
name = "api-form"
version = "0.1.0"
description = ""
authors = ["GuilhermehVinicius <guilherme.ribeiro.business@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.10"
ignr = "^2.2"
pydantic-settings = "^2.7.0"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
